bissel weitergekommen jetzt, angular fit weiter

--- a/new_proceedings.tex
+++ b/new_proceedings.tex
@@ -73,15 +73,29 @@ This is also true for the Pion and the Kaon.
 The angle $\phi$ is the the angle between the normalvector of the K-$\pi$-plane and the $\mu$-$\mu$-plane.
 This analysis can give access to more observables with reduced uncertainties.
 %
-% \section{Early LHCb Measurementsand local tension}
-%
-%
-% \section{Eventselection}
-%
-%
-% \section{Signal and Background}
-%
-%
+\section{Early LHCb Measurementsand local tension}
+Angular analysis for local tension in $P\prime_5$ performed by other collaborations such as ATLAS and CMS show similar results but Data taken stops at roughly the $J\/\Psi$ Mass due to the resonant background.
+Therefore the ATLAS measurement is not so good.
+As seen in some global fits, the shift in the wilson coefficent
+$\text{Re}\left(C_9\right)$, the deviations in these wilson coefficents or up to $\num{3-5}\sigma$. In general, these fits are a good tool to learn from the fits.
+
+\section{The data set and Selection of Candidates}
+The data used comes from the years 2011, 2012, which was Run 1, and 2016. The center of mass energies were $\SI{7, 8, 13}{\tera\electronvolt}$ respectively.
+The data taken in the later years is nearly double from what the have taken in 2011.
+
+For the stated process, it is required that the impact parameter for the daughters are quite large because they don't come from the primary vertex.
+Also the PID\footnote{particle identification} is used to suppress the peaks in the background.
+Machine learning algorithms are used to reduce combinatorial background.
+For the probe regions in the $q^2$ plot, the signal regions muste be seperated fromm the background regions.
+Since there are decay modes which have the same final state as our wanted process, there are several peak regios which muste be cut out. This is for example the charmonium background of the
+$J\/\Psi$ and the $\psi$ meson.
+The signal regions for the decay mode $b \to s \mu \mu$ can the be interpreted seperately. Also the photon pole at $q^2 = 0$. can be examined.
+
+The binning used is historically conditioned. The only cause for that is to compact the data. One boundary at $\SI{1.1}{\giga\electronvolt}$ is set to delete the $\phi(1020)$ resonance from the data.
+
+\section{Angular description}
+To describe now the physics behind the angular analysis, instead of using the non-pertubative QCD form factors and the wilson coefficents, angular amplitudes $\symup{A}^{L\/R}$ are defined.
+
 % \section{angular fit model vs full fit model}
 %
 %
