proceeding endlich fertig

--- a/lit.bib
+++ b/lit.bib
@@ -84,3 +84,9 @@ url = "http://www.sciencedirect.com/science/article/pii/S037026931001333X"
       reportNumber   = "CERN-EP-2016-088",
       SLACcitation   = "%%CITATION = ARXIV:1606.02699;%%"
 }
+@online{cern,
+      author = "Elune Anne Smith",
+      title = "Updated angular analysis of the decay $B^{0}\rightarrow K^{*0}(\to K^+ \pi^-)\mu^{+}\mu^{-}$",
+      url = "https://indi.to/bMm9K",
+      urldate = "2020-07-17"
+}
