morgen anfangen mit der korrektur

--- a/header.tex
+++ b/header.tex
@@ -31,7 +31,8 @@
 % \recalctypearea{}
 % deutsche Spracheinstellungen
 \usepackage{polyglossia}
-\setmainlanguage{german}
+% \setmainlanguage{german}
+\setmainlanguage{english}
 
 \usepackage{marvosym}
 \usepackage[
@@ -56,7 +57,7 @@
 
 % Zahlen und Einheiten
 \usepackage[
-  locale=DE,                   % deutsche Einstellungen
+  locale=DE,                   % deutsche Einstellungen, sonst DE
   separate-uncertainty=true,   % immer Fehler mit \pm
   per-mode=symbol-or-fraction,
   alsoload=hep,                % / in inline math, fraction in display math
