--- a/lit.bib
+++ b/lit.bib
@@ -85,8 +85,48 @@ url = "http://www.sciencedirect.com/science/article/pii/S037026931001333X"
       SLACcitation   = "%%CITATION = ARXIV:1606.02699;%%"
 }
 @online{cern,
-      author = "Elune Anne Smith",
+      author = "Eluned Anne Smith",
       title = "Updated angular analysis of the decay $B^{0}\rightarrow K^{*0}(\to K^+ \pi^-)\mu^{+}\mu^{-}$",
       url = "https://indi.to/bMm9K",
       urldate = "2020-07-17"
+}
+@article{Blake:2017wjz,
+    author = "Blake, T. and Gersabeck, M. and Hofer, L. and Jäger, S. and Liu, Z. and Zwicky, R.",
+    editor = "Foka, Y. and Brambilla, N. and Kovalenko, V.",
+    title = "{Round table: Flavour anomalies in b $\rightarrow$ sl+l$-$ processes}",
+    eprint = "1703.10005",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CP3-ORIGINS-2017-009, CCUB-17-008",
+    doi = "10.1051/epjconf/201713701001",
+    journal = "EPJ Web Conf.",
+    volume = "137",
+    pages = "01001",
+    year = "2017"
+}
+@article{Descotes-Genon:2013vna,
+    author = "Descotes-Genon, Sebastien and Hurth, Tobias and Matias, Joaquim and Virto, Javier",
+    title = "{Optimizing the basis of $B\to K^*ll$ observables in the full kinematic range}",
+    eprint = "1303.5794",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "UAB-FT-732, LPT-ORSAY-13-24, MITP-13-020",
+    doi = "10.1007/JHEP05(2013)137",
+    journal = "JHEP",
+    volume = "05",
+    pages = "137",
+    year = "2013"
+}
+@article{Straub:2015ica,
+    author = "Bharucha, Aoife and Straub, David M. and Zwicky, Roman",
+    title = "{$B\to V\ell^+\ell^-$ in the Standard Model from light-cone sum rules}",
+    eprint = "1503.05534",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TUM-HEP-957-14, CP3-Origins-2015-010, DIAS-2015-10",
+    doi = "10.1007/JHEP08(2016)098",
+    journal = "JHEP",
+    volume = "08",
+    pages = "098",
+    year = "2016"
 }
