added papers to file -> read! worked on angular describtion; need toinclude some plots though next session: data selection and decay with  plus amplitudes

--- a/lit.bib
+++ b/lit.bib
@@ -130,3 +130,30 @@ url = "http://www.sciencedirect.com/science/article/pii/S037026931001333X"
     pages = "098",
     year = "2016"
 }
+@article{Bobeth:2010wg,
+    author = "Bobeth, Christoph and Hiller, Gudrun and van Dyk, Danny",
+    title = "{The Benefits of $\bar{B} -> \bar{K}^* l^+ l^-$ Decays at Low Recoil}",
+    eprint = "1006.5013",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-PH-TH-2010-134, DO-TH-10-08",
+    doi = "10.1007/JHEP07(2010)098",
+    journal = "JHEP",
+    volume = "07",
+    pages = "098",
+    year = "2010"
+}
+@article{Chatrchyan:2013cda,
+    author = "Chatrchyan, Serguei and others",
+    collaboration = "CMS",
+    title = "{Angular Analysis and Branching Fraction Measurement of the Decay $B^0 \to K^{*0} \mu^+\mu^-$}",
+    eprint = "1308.3409",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-BPH-11-009, CERN-PH-EP-2013-152",
+    doi = "10.1016/j.physletb.2013.10.017",
+    journal = "Phys. Lett. B",
+    volume = "727",
+    pages = "77--100",
+    year = "2013"
+}
