gut weitergekommen als naechstes efficiencies

--- a/lit.bib
+++ b/lit.bib
@@ -157,3 +157,9 @@ url = "http://www.sciencedirect.com/science/article/pii/S037026931001333X"
     pages = "77--100",
     year = "2013"
 }
+@online{combinatoric,
+  author = "Stefan Kniege, Bjørn Bäuchle",
+  title = "How to subtract combinatorial Background",
+  url = "https://fias.frankfurtium.de/downloads/04_hqm_cb.pdf",
+  urldate = "2020-08-09"
+}
