--- a/new_proceedings.tex
+++ b/new_proceedings.tex
@@ -17,11 +17,13 @@
 \author{Nils Breer}
 \date{Technische Universit\"at Dortmund}
 
-\title{Proceeding to the LHC seminar talk \textit{Update of the $B^0$ \to $K^{*0}$ µ$^{+}$ µ$^{-}$ angular analysis at LHCb} held by Eluned Smith on behalf of the LHC collaboration on 13th of March 2020.}
+\title{Proceeding to the LHC seminar talk \textit{Update of the $B^0$ \to $K^{*0}$ µ$^{+}$ µ$^{-}$ angular analysis at LHCb experiment} held by Eluned Smith on behalf of the LHC collaboration on 13th of March 2020.}
 
 \maketitle
 
 % hier kommt ein abstract rein!!
+(das ist von fabian! nur als hilfe benutzen um zu wissen was da so rein kann.)
+The search for physics beyond the standard model continues especially in high precision measurements. One of the most promising decay types for new possible interactions are flavor changing neutral currents. In this analysis data from 2011, 2012 and 2016 is used to update the prior angular analysis of the process stated above which only used the 20111 and 2012 data. With twice the statistics and a better understanding of theoretical uncertainties the analysis confirms the local tension in $P_5\prime$ found in the first analysis. A possible explanation of the tension is given by introducing a shift to the Wilson coefficient $C_9$. This increases the significance of the tension to $2.7$ - $3.3\sigma$.
 
 The stated Process is of such importance because the
 $b \to s \mu \mu$ transition is forbidden at tree level due to FCNC and can only occur at loop order.
@@ -57,6 +59,7 @@ $G_F$ is Fermi's constant, $\mu$ ist the renormalization scale, $\symup{V}_{tb} 
 
 % \section{angular Analysis}
 To measure the decay rate as a function of angles of the decay products, an angular analysis is performed.
+This is motivated by the fact, that the $K^{0*}$ is a meson with spin 1 therefore three polarisation states. This results in a rich angular structure.
 The definition of the angular observables $\theta_{k}$, $\theta_{l}$ and $\phi$ is schematically shown in figure \ref{fig:angle_1}
 
 \begin{figure}[htb]
@@ -75,7 +78,7 @@ Considering that S-wave contribution, spinless $K^{+}\pi^{-}$ constellations, ca
 The interference Amplitude between P-wave and S-wave decays are parametrized by $A_S$.
 The angular distribution\cite{Chatrchyan:2013cda} for the $B^0 \to K^{*0} \mu \mu$ decay reads
 \begin{equation*}
-  \frac{1}{\Gamma}\frac{\symup{d}^3\Gamma}{\symup{d}\theta_k\symup{d}\theta_l\symup{d}q^2} = f\left(F_S, A_S, \theta_k, \theta_l, A_{FB}, F_L\right)
+  \frac{1}{\Gamma}\frac{\symup{d}^3\Gamma}{\symup{d}\theta_k\symup{d}\theta_l\symup{d}q^2} = \frac{9}{16}f\left(F_S, A_S, \theta_k, \theta_l, A_{FB}, F_L\right)
 \end{equation*}
 Since $A_{FB}$, $F_L$ and $\mathcal{A}\times\Epsilon$ do not depend on the angle $\phi$, it is already integrated out.
 The angular description for The $B$ and $\bar{B}$ are combined afterwards and expanded into a sum of the angular variables multiplied with a fitparameter, which are the $A_{FB}$, $F_L$ and $S_i$\ref{fig:dubgamma}, which are called CP-averaged observables because they contain CP violation.
@@ -89,17 +92,28 @@ The angular description for The $B$ and $\bar{B}$ are combined afterwards and ex
 
 Then the fit in the $S_i$ basis was reparametrised to the $P_i$ basis.
 This was done to eliminate first order uncertainties in the form factors primarily.
-The fit yields seven CP violating observables including $F_L$.
+The fit to the angular distribution yields seven CP violating observables including $F_L$.
+The $P_i$ basis contains the amplitudes of the $K^{0*}$ as angular coefficients as seen in table \ref{tab:coefff}.
 \begin{align*}
   P_1 &= \frac{2 S_3}{1 - F_L} & P_{4,5,8}\prime &= \frac{S_{4,5,8}}{\sqrt{F_L\left( 1 - F_L \right)}} \\
   P_2 &= \frac{2}{3}\frac{A_{FB}}{1 - F_L} &  P_6\prime &= \frac{S_7}{\sqrt{F_L\left( 1 - F_L \right)}} \\
   P_3 &= \frac{- S_9}{1 - F_L} \\
 \end{align*}
 
+The angular distribution can be reduced to
+\begin{equation*}
+  \frac{1}{\Gamma}\frac{\symup{d}^3\Gamma[\bar{B}^0 \to \bar{K}^{0*} \mu^{+} \mu^{-}]}
+  {\symup{d}\cos\theta_l\symup{d}\cos\theta_k\symup{d}q^2} =
+  \frac{9}{16}\sum_i S_i(q_{min}^2, q_{max}^2) f_i(\vec{\Omega})
+\end{equation*}
+in the $S_i$ basis.
+The $S_i$ basis contains the six angular coefficients which are the combinations of the $K^{0*}$ amplitudes and $\vec{\Omega} = (\cos\theta_l, \cos\theta_k)$. These amplitudes describe the polarization states of the Kaon.
+
 This analysis especially focuses heavily on the tension induced by $P_5\prime$, since it is a very sensitive variable for $C_9$.
-This can be seen in the range of $4$ - $8$ $\frac{\symup{GeV}}{c^4}$.
-For every collaboration a discrepancy of between the SM and the measurement
-displayed in figure \ref{p5tension}
+This can be seen in the range of $4$ - $8$ $\frac{\symup{GeV}^2}{c^4}$ displayed in figure \ref{p5tension}.
+The discrepancy is $2.8\sigma$ for the $q^2$ intervall from $4$ - $6$ $\frac{\symup{GeV}^2}{c^4}$ and $3\sigma$ for the $6$ - $8$ $\frac{\symup{GeV}^2}{c^4}$ intervall.
+For every collaboration a discrepancy between the SM and the measurement
+is visible, but the CMS measurement is the closest the the SM prediction.
 
 \begin{figure}[htb]
   \centering
@@ -108,50 +122,40 @@ displayed in figure \ref{p5tension}
   \label{p5tension}
 \end{figure}
 
-% \section{early LHCb Measurementsand local tension}
-Angular analysis for local tension in $P\prime_5$ performed by other collaborations such as ATLAS and CMS show similar results but Data taken stops at roughly the $J\/\Psi$ Mass due to the resonant background.
-Therefore the ATLAS measurement is not so good.
-As seen in some global fits, the shift in the wilson coefficent
-$\text{Re}\left(C_9\right)$, the deviations in these wilson coefficents or up to $3$ - $5$ $\sigma$. In general, these fits are a good tool to learn from the fits.
+For this analysis the data sets used are from the years 2011, 2012 and 2016. The data sets from 2011 and 2012 are from run 1.
+The 2011 data was taken at a centre of mass energy of $\sqrt{s} = \SI{7}{\tera\electronvolt}$, the 2012 data at $\sqrt{s} = \SI{8}{\tera\electronvolt}$ and the added data set from 2016 was taken at $\sqrt{s} = \SI{13}{\tera\electronvolt}$. Adding the 2016 data also doubled the statistic to around $\SI{4.7}{\per\femto\barn}$.
 
-% \section{the data set and Selection of Candidates}
-The data used comes from the years 2011, 2012, which was Run 1, and 2016. The center of mass energies were 7, 8 and 13 $\si{\tera\electronvolt}$ respectively.
-The data taken in the later years is nearly double from what the have taken in 2011.
+For the selection of candidates it is required, that the impact paramters for the daughter particles are quite significant since they do not originate from the primary vertex.
+Daughter particles that come from the primary need to have a very small impact parameter and also a quality vertex is necessary. That means the track fit $\frac{\chi^2}{dof}$ must be small, where dof are the degrees of freedom.
+To suppress peaking background as seen in figure \ref{fig:q2_spec} the particle identification is used.
+The FCNC process here is described by $B^0 \to K^{0*}\mu\mu$, but the subprocesses such as $B^0 \to K^{0*}\left(\bar{c}c \to \gamma^{*} \to \mu\mu\right)$ are statistical relevant since they proceed at tree level.
+Therefore charmonium resonances pollute the $q^2$ spectrum, especially ate the $\symup{J}/\Psi(1S)$ and the $\phi(2S)$ mass.
+Around these peaks a mass-veto region is defined where signal decays cannot occur.
+Left, in between and on the right of the peaks the signal regions are defined.
+A multivariate analysis(MVA) is performed to suppress combinatorial background even further.
+MVA's is a machine learning technique in which a classifier or regressor takes several features to learn from and to make a prediction on what is background and what belongs to the signal.
+To suppress $J/\Psi \to ll$ contributions, the invariant mass spectrum is looked at.
+The most common features are: small momentum particles and small opening angles and a large $\symup{d}E / \symup{d}x$.
+Since the detector cannot know which lepton pairs belong together, all possible combinations are tested. Combinations with same signed leptons ($N^{++}$ or $N^{--}$) are always uncorrelated so the signal S results in $S = N^{+-} - (N^{++} or N^{--})$. This is called the like-sign method\cite{combinatoric}.
+$N^{+-}$ are the opposite sign lepton pairs.
 
-For the stated process, it is required that the impact parameter for the daughters are quite large because they don't come from the primary vertex.
-Also the PID\footnote{particle identification} is used to suppress the peaks in the background.
-Machine learning algorithms are used to reduce combinatorial background.
-For the probe regions in the $q^2$ plot, the signal regions muste be seperated fromm the background regions.
-Since there are decay modes which have the same final state as our wanted process, there are several peak regios which muste be cut out. This is for example the charmonium background of the
-$J\/\Psi$ and the $\psi$ meson.
-The signal regions for the decay mode $b \to s \mu \mu$ can the be interpreted seperately. Also the photon pole at $q^2 = 0$. can be examined.
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=0.5\textwidth]{flavor_plots/q2_spectrum.png}
+  \caption{spectrum in $q^2$ for the \\
+  lepton pair in Kll branching fraction\cite{Blake:2017wjz}.}
+  \label{fig:q2_spec}
+\end{figure}
 
-The binning used is historically conditioned. The only cause for that is to compact the data. One boundary at $\SI{1.1}{\giga\electronvolt}$ is set to delete the $\phi(1020)$ resonance from the data.
-
-% \section{angular fit model}
-To describe now the physics behind the angular analysis, instead of using the non-pertubative QCD form factors and the wilson coefficents, angular amplitudes $\symup{A}^{L\/R}$ are defined.
-Then we measure in the bins of $q^2 = m^2(\mu \mu)$ by firstly integrating over $q^2$ and secondly combining this with the $B^0$ and $\bar{B}^0$ decays.
-This results in a so called CP-averaged basis $S_i$.
-The resulting $\frac{\symup{d}\Gamma}{\symup{d}q^2}$ spectrum is then
-\begin{equation*}
-  \frac{1}{\frac{\symup{d}\left(\Gamma + \bar{\Gamma}\right)}{\symup{d}q^2}} \cdot
-  \frac{\symup{d}\left(\Gamma + \bar{\Gamma}\right)}{\symup{d}\cos\theta_l\symup{d}\cos\theta_k\symup{d}\phi}
-  \rvert_P = \frac{9}{32\pi}\cdot f(F_{L}, \theta_{k}, \theta_{l}, A_{FB}, S_{i})
-\end{equation*}
-
-Here, the $F_L$ describes the fraction of longitudinal polarisation of the $K^{0*}$. $A_{FB}$ ist the forward/backward asymmetry of the dimuon system.
-In order the reduce uncertainties, the first basis of the $S_i$ is transformed into a basis $P_i$ which takes ratios of observables\cite{cern}.
-
-% \section{full fit model}
-In the full fit model the shape of the invariant mass plots are used to determine the amount of signal and background in the data.
+Now for the full fit model the shape of the invariant mass plots are used to determine the amount of signal and background in the data.
 \begin{equation*}
   \symup{PDF}_{total} = f_{sig}\symup{PDF}_{sig}(\vec{\Omega}, m) +
-  (1 - f_{sig})\symup{PDF}_{bkg}
+  (1 - f_{sig})\symup{PDF}_{bkg}(\vec{\Omega}, m)
 \end{equation*}
 
 The PDF function can be separated into an angular part and a massive part.
 After that a maximum likelihood fit is performed.
-As seen in figure \ref{fig:fullfit} the massive part of the signal PDF is a gaussian fucntion with a radiative tail and the background PDF results in a exponential function.
+As seen in figure \ref{fig:fullfit} the massive part of the signal PDF is a gaussian fucntion with a radiative tail and the background PDF results in an exponential function.
 
 \begin{figure}[htb]
   \centering
@@ -161,40 +165,41 @@ As seen in figure \ref{fig:fullfit} the massive part of the signal PDF is a gaus
 \end{figure}
 
 Because of the factorization of the signal and background PDF
-\begin{equation*}
-  \symup{PDF}_{sig}(\vec{\Omega}, m) = \symup{PDF}_{sig}(\vec{\Omega}) \times \symup{PDF}_{sig}(m)
-\end{equation*}
-the angular part of the signal PDF of the Run 1 data and the data from 2016 can be shared in the analysis to perform a simultaneous fit $\sum_I S_{i, q_{bin}^2} f_i(\Omega)$.
+\begin{align*}
+  \symup{PDF}_{sig}(\vec{\Omega}, m) &= \symup{PDF}_{sig}(\vec{\Omega}) \times \symup{PDF}_{sig}(m) \\
+  \symup{PDF}_{bkg}(\vec{\Omega}, m) &= \symup{PDF}_{bkg}(\vec{\Omega}) \times \symup{PDF}_{bkg}(m)
+\end{align*}
+the angular part of the signal PDF of the Run 1 data and the data from 2016 are shared in the analysis to perform a simultaneous fit $\sum_i S_{i, q_{bin}^2} f_i(\Omega)$ because the angular part of the signal PDF corresponds to $f_i(\Omega)$. The $S_i$ are thus used as fitparameters.
 
-% \section{modelling the efficiencies}
-Because the angular distribution and the $q^2$ distribution are influenced by the efficiencies, the parametrisation must be well known.
-This is done via an acceptance function, her the legendre polynomials. With 3 angles and $q^2$ a 4D parametrisation results in 4 coefficents
-
-% \section{s-wave contribution}
-The $K \pi$ final state has more than one spin eigenstate. Therefore, additional terms are needed to differentiate between these states.
-Because $K \pi \mu \mu$ can be produced in a vector state which disturbs the angular distribution, the different structures of the spin 1 $K^{0*}$ and the flat structure of the $K \pi$ state need to be analyzed.
-
-% \section{uncertainties}
-The dominant systematic uncertainties across the $q^2$ bins are acceptance variation with $q^2$, peaking backgrounds and the bias correction.
-The whole table of uncertainties is shown in figure \ref{fig:unc}\cite{cern}.
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=0.5\textwidth]{pictures/uncertainties.png}
-  \caption{table of systematic uncertainties.}
-  \label{fig:unc}
-\end{figure}
-
-Because of different decays in the same target finalstate, for example $\bar{\Lambda}_b^0 \to \bar{p} \to \pi^{-} K^{+} \mu \mu$, events that are drawn from distributions of these peaking backgrounds are not taken into the fit.
-Bias corrections come up if boundary effects like $F_S > 0$ are required.
-\begin{equation*}
-  ~\frac{\symup{d}\Gamma}{\symup{d}q^2}\rvert_{S + P} = \left(1 - F_S \right) ~\frac{\symup{d}\Gamma}{\symup{d}q^2}\rvert_P
-\end{equation*}
-For small $F_S$ the bias towards higher values biases the P-wave and vice versa.
-
-% \section{Results and conclusion}
-If the energy threshold is so big, that a $c\bar{c}$ pair can be produced in a loop which generates a $J \/ \Psi$, the would be a possibility to detect it.
-
-The tension is confirmed with the 2016 data set.
-The significance of the discrepancy is nuisance parameter dependend and also depends on the $q^2$ bins.
+% % \section{modelling the efficiencies}
+% Because the angular distribution and the $q^2$ distribution are influenced by the efficiencies, the parametrisation must be well known.
+% This is done via an acceptance function, her the legendre polynomials. With 3 angles and $q^2$ a 4D parametrisation results in 4 coefficents
+%
+% % \section{s-wave contribution}
+% The $K \pi$ final state has more than one spin eigenstate. Therefore, additional terms are needed to differentiate between these states.
+% Because $K \pi \mu \mu$ can be produced in a vector state which disturbs the angular distribution, the different structures of the spin 1 $K^{0*}$ and the flat structure of the $K \pi$ state need to be analyzed.
+%
+% % \section{uncertainties}
+% The dominant systematic uncertainties across the $q^2$ bins are acceptance variation with $q^2$, peaking backgrounds and the bias correction.
+% The whole table of uncertainties is shown in figure \ref{fig:unc}\cite{cern}.
+% \begin{figure}[htb]
+%   \centering
+%   \includegraphics[width=0.5\textwidth]{pictures/uncertainties.png}
+%   \caption{table of systematic uncertainties.}
+%   \label{fig:unc}
+% \end{figure}
+%
+% Because of different decays in the same target finalstate, for example $\bar{\Lambda}_b^0 \to \bar{p} \to \pi^{-} K^{+} \mu \mu$, events that are drawn from distributions of these peaking backgrounds are not taken into the fit.
+% Bias corrections come up if boundary effects like $F_S > 0$ are required.
+% \begin{equation*}
+%   ~\frac{\symup{d}\Gamma}{\symup{d}q^2}\rvert_{S + P} = \left(1 - F_S \right) ~\frac{\symup{d}\Gamma}{\symup{d}q^2}\rvert_P
+% \end{equation*}
+% For small $F_S$ the bias towards higher values biases the P-wave and vice versa.
+%
+% % \section{Results and conclusion}
+% If the energy threshold is so big, that a $c\bar{c}$ pair can be produced in a loop which generates a $J \/ \Psi$, the would be a possibility to detect it.
+%
+% The tension is confirmed with the 2016 data set.
+% The significance of the discrepancy is nuisance parameter dependend and also depends on the $q^2$ bins.
 \printbibliography{}
 \end{document}
