basic abstract eingefuegt; mehr erklaerung der local tension benoetigt

--- a/new_proceedings.tex
+++ b/new_proceedings.tex
@@ -21,9 +21,11 @@
 
 \maketitle
 
-% hier kommt ein abstract rein!!
-(das ist von fabian! nur als hilfe benutzen um zu wissen was da so rein kann.)
-The search for physics beyond the standard model continues especially in high precision measurements. One of the most promising decay types for new possible interactions are flavor changing neutral currents. In this analysis data from 2011, 2012 and 2016 is used to update the prior angular analysis of the process stated above which only used the 20111 and 2012 data. With twice the statistics and a better understanding of theoretical uncertainties the analysis confirms the local tension in $P_5\prime$ found in the first analysis. A possible explanation of the tension is given by introducing a shift to the Wilson coefficient $C_9$. This increases the significance of the tension to $2.7$ - $3.3\sigma$.
+% meins:
+The LHCb collaboration has published new results regarding flavor changing neutral currents based on recent studies for physics beyond standard model. FCNC are very promising decay types since they only occur at loop level and are therfore very sensitive for new physics.
+The data from the previous analysis in 2011 and 2012 were expanded by the 2016 data which results in twice the amount of statistics.
+With this and a deeper understanding of theoretical uncertainties an angular analysis was performed. The hints on a local tension in $P_5\prime$ were confirmed with this analysis. One of the explanations points to a shift in the wilson coefficient $C_9$.
+The significance of the tension results in $2.7$ - $3.3\sigma$.
 
 The stated Process is of such importance because the
 $b \to s \mu \mu$ transition is forbidden at tree level due to FCNC and can only occur at loop order.
